php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #19935 OpenSSL extension don't use safe_mode & open_basedir restriction
Submitted: 2002-10-16 10:12 UTC Modified: 2002-11-09 23:19 UTC
From: sitnikov at infonet dot ee Assigned:
Status: Closed Package: OpenSSL related
PHP Version: 4.3.0-pre1 OS: All
Private report: No CVE-ID: None
 [2002-10-16 10:12 UTC] sitnikov at infonet dot ee
All openssl functions don't use safe_mode & open_basedir restriction when working with file.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-11-09 23:19 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC