Fixed bug #19935. Made OpenSSL file system operations abide by safe_mode & open_basedir restrictions.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@103139 c90b9560-bf6c-de11-be94-00142212c4b1